# rosrtm_sbom

./: README.md  pyproject.toml
src/rosrtm_sbom/: cli.py  config.py  model.py  resolver.py
src/rosrtm_sbom/analyzers/: __init__.py  cmake_link.py  elf.py  python_imports.py  ros_manifest.py
src/rosrtm_sbom/writer/: cyclonedx_json.py
